@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.17
 
+	- The pdftops filter didn't support all of the MacOS
+	  characters for MacRoman encoded fonts.
 	- The cupsEncodeOptions() and cupsParseOptions()
 	  functions now conform to the grammer defined by the
 	  current draft of the PAPI specification.  The main
